i couldn't fix it on iOS (you can see it work with the inspect tool on chrome)

--- a/HomeStyle.css
+++ b/HomeStyle.css
@@ -184,7 +184,7 @@ body {
 
 
 header {
-  height: 900px; /* Gebruik aangepaste hoogte voor iOS */
+  height: 100vh; /* Gebruik aangepaste hoogte voor iOS */
   background-image: url(images/hero-header.jpg);
   background-size: cover;
   background-position: center center;
